1、删除无用数据 2、优化协程

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".activity.MainActivity">
 
     <TextView
+        android:id="@+id/tv_show_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
